RESOLVED FIXED100889
CustomFilterOperation parameters list is not decoded correctly in CoordinatedGraphicsArgumentCoders
https://bugs.webkit.org/show_bug.cgi?id=100889
Summary CustomFilterOperation parameters list is not decoded correctly in Coordinated...
Alexandru Chiculita
Reported 2012-10-31 14:29:23 PDT
The parameter list is initialized with a size and then the append command is used to add the paramaters. That will double the size of the list and let some empty spaces at the beginning of it.
Attachments
Patch V1 (3.68 KB, patch)
2012-10-31 14:34 PDT, Alexandru Chiculita
no flags
Alexandru Chiculita
Comment 1 2012-10-31 14:34:28 PDT
Created attachment 171722 [details] Patch V1
Noam Rosenthal
Comment 2 2012-10-31 14:37:21 PDT
Comment on attachment 171722 [details] Patch V1 Thank you!
WebKit Review Bot
Comment 3 2012-10-31 17:10:16 PDT
Comment on attachment 171722 [details] Patch V1 Clearing flags on attachment: 171722 Committed r133099: <http://trac.webkit.org/changeset/133099>
WebKit Review Bot
Comment 4 2012-10-31 17:10:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.